# aerodrag-wheel

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  prj.conf  west.yml
boards/: xiao_ble_nrf52840_sense.overlay
docs/: CHILD_PROMPT.md
src/: main.c  wheel.h  wheel_battery.c  wheel_ble.c  wheel_store.c
